# rdg-linux

./: .drone.yml  .gitignore  Cargo.toml  Makefile  README.md  hexdump.txt  install.sh  profiles.json  project.json  settings.json  sha512.sum
.circleci/: config.yml
assets/: .gitignore  net.olback.rdg.desktop  rdg.glade  rdg.gresource.xml
docs/: index.html  rdg.css  rdg.min.css
src/: #rdg.glade#  connect.c  connections.rs  error.rs  functions.c  gresource.xml  macros.rs  main.c  main.rs  profiles.rs  rdg.glade  rdg.glade~  rdg.rs  resources.c  resources.rs  settings.rs  ui.rs  vars.h  window.c
src/include/: connect.c  update.c  vars.h  window.c
src/layout/: rdg.glade
tools/: build.py
