[package]
name = "rdg"
version = "0.1.0"
authors = ["Edwin Svensson <git@olback.net>"]
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.8"
gtk = "0.8"
glib = "0.9"
dirs = "2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
reqwest = "0.10"

[build-dependencies]
regex = "1.3"
last-git-commit = "0.1"
