[package]
name = "rdg"
version = "3.0.0"
authors = ["Edwin Svensson <rdg-linux@olback.net>"]
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.8"
gtk = "0.8"
glib = "0.9"
dirs = "2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
padlock = "0.1.1-alpha"

[build-dependencies]
regex = "1.3"
last-git-commit = "0.1"
